# actix-simple-http

./: Cargo.toml  README.md
src/: appconfig.rs  lib.rs  main.rs  services.rs
src/handlers/: helpers.rs  mod.rs  products.rs
static/: welcome.html
