[package]
name = "actix-simple-http"
license = "MIT OR Apache-2.0"
version = "0.1.0"
readme = "README.md"
authors = ["bartekus <bartekus@gmail.com>"]
repository = "https://github.com/bartekus/actix-simple-http/"
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"

futures = "0.3.1"
env_logger = "0.7"
bytes = "0.5"
